add initial react based thing

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@opentui/core": "^0.1.25",
     "@opentui/react": "^0.1.25",
+    "diff": "^8.0.2",
     "react": "^19.1.1"
   }
 }
